--- a/public/home.html
+++ b/public/home.html
@@ -3,6 +3,9 @@
   <head>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script>
   </head>
   <body>
     <h1>Test</h1>
