--- a/public/home.html
+++ b/public/home.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <script type="text/javascript" src="js/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
     <script>
       var socket = io();
     </script>
