--- a/public/home.html
+++ b/public/home.html
@@ -10,6 +10,17 @@
     </script>
   </head>
   <body>
+    <script>
+      $('document').ready(function(){
+        $.ajax({
+          url: '/messages',
+          method: 'POST',
+          data: {store: 'jakes'}
+        }).done(function(data){
+          console.log(data);
+        });
+      });
+    </script>
     <h1>Test</h1>
   </body>
 </html>
