--- a/public/home.html
+++ b/public/home.html
@@ -9,11 +9,11 @@
   <script src="js/angular.min.js"></script>
 </head>
 <body>
-  <div id="page-wrapper" ng-class="{'open': toggle}" ng-cloak>
+  <div id="page-wrapper">
     <div id="sidebar-wrapper">
       <ul class="sidebar">
         <li class="sidebar-main">
-          <a ng-click="toggleSidebar()">
+          <a>
             Dashboard
             <span class="menu-icon glyphicon glyphicon-transfer"></span>
           </a>
