--- a/public/home.html
+++ b/public/home.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>My HTML File</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="components/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+  <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script src="js/angular.min.js"></script>
 </head>
 <body>
