--- a/public/home.html
+++ b/public/home.html
@@ -7,11 +7,11 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>SB Admin 2 - Bootstrap Admin Theme</title>
-  <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
-  <link href="../bower_components/datatables-responsive/css/dataTables.responsive.css" rel="stylesheet">
-  <link href="css/jake.css" rel="stylesheet">
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
+  <link href="bower_components/datatables-responsive/css/dataTables.responsive.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
