--- a/public/home.html
+++ b/public/home.html
@@ -168,5 +168,6 @@
     <!--<script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>-->
     <script src="js/angular.min.js"></script>
+    <script src='js/app.js'></script>
   </body>
 </html>
