--- a/public/home.html
+++ b/public/home.html
@@ -138,7 +138,7 @@
               <i class="fa fa-envelope fa-fw"></i> Messages
             </div>
             <div class="panel-body">
-              <div class="dataTable_wrapper">
+              <div class="dataTable_wrapper"  ng-controller="EmailCtrl">
                 <table class="table table-striped table-bordered table-hover" id="mailTable">
                   <thead>
                     <tr>
@@ -149,7 +149,7 @@
                       <th>Received</th>
                     </tr>
                   </thead>
-                  <tbody ng-controller="EmailCtrl">
+                  <tbody>
                     <tr ng-repeat="email in emails" ng-click="showPopup(email)">
                       <td>{{ email.Flagged }}</td>
                       <td>{{ email.RecipientUserID }}</td>
