--- a/public/home.html
+++ b/public/home.html
@@ -137,8 +137,8 @@
             <div class="panel-heading">
               <i class="fa fa-envelope fa-fw"></i> Messages
             </div>
-            <div class="panel-body">
-              <div class="dataTable_wrapper"  ng-controller="EmailCtrl">
+            <div class="panel-body container" ng-controller="EmailCtrl">
+              <div class="dataTable_wrapper">
                 <table class="table table-striped table-bordered table-hover" id="mailTable">
                   <thead>
                     <tr>
