--- a/public/home.html
+++ b/public/home.html
@@ -137,7 +137,7 @@
             <div class="panel-heading">
               <i class="fa fa-envelope fa-fw"></i> Messages
             </div>
-            <div class="panel-body container" ng-controller="EmailCtrl">
+            <div class="panel-body" ng-controller="EmailCtrl">
               <div class="dataTable_wrapper">
                 <table class="table table-striped table-bordered table-hover" id="mailTable">
                   <thead>
@@ -159,7 +159,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <div class="modal" ng-show="isPopupVisible">
+                <div class="modal" ng-show="EmailCtrl.isPopupVisible">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closePopup()">&times;</button>
                     <h3>{{selectedEmail.Subject}}</h3>
