--- a/public/home.html
+++ b/public/home.html
@@ -160,7 +160,7 @@
                   </tbody>
                 </table>
                 <div class="modal">
-                  {{isPopupVisible}}
+                  <p>{{isPopupVisible}}</p>
                   <!--<div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closePopup()">&times;</button>
                     <h3>{{selectedEmail.Subject}}</h3>
