--- a/public/home.html
+++ b/public/home.html
@@ -160,27 +160,7 @@
                   </tbody>
                 </table>
                 <div class="modal">
-                  <p>{{isPopupVisible}}</p>
-                  <!--<div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closePopup()">&times;</button>
-                    <h3>{{selectedEmail.Subject}}</h3>
-                  </div>
-                  <div class="modal-body">
-                    <strong>From:</strong> {{selectedEmail.Sender}}<br />
-                    <strong>Date:</strong> {{selectedEmail.ReceiveDate}}<br />
-                    <br />
-                    <p>
-                      Hey You, <br />
-                      <br />
-                      How you doing?<br />
-                      <br />
-                      Sincerely<br />
-                      Your Bro
-                    </p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#" class="btn btn-primary" ng-click="closePopup()">Close</a>
-                  </div>-->
+
                 </div>
               </div>
             </div>
@@ -189,10 +169,10 @@
       </div>
     </div>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!--<script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>-->
     <script src="js/angular.min.js"></script>
+    <script src='js/ui-bootstrap-tpls-0.13.4.js'></script>
     <script src='js/app.js'></script>
   </body>
 </html>
