--- a/public/home.html
+++ b/public/home.html
@@ -159,9 +159,6 @@
                     </tr>
                   </tbody>
                 </table>
-                <div class="modal">
-
-                </div>
               </div>
             </div>
           </div>
@@ -170,8 +167,10 @@
     </div>
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <!--<script src="../bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src='js/ui-bootstrap-tpls-0.13.4.js'></script>
     <script src="../bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js"></script>-->
     <script src="js/angular.min.js"></script>
+    <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
     <script src='js/ui-bootstrap-tpls-0.13.4.js'></script>
     <script src='js/app.js'></script>
   </body>
