--- a/public/temps/email.html
+++ b/public/temps/email.html
@@ -1,22 +1,17 @@
-<div class="modal">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closePopup()">&times;</button>
-    <h3>{{selectedEmail.Subject}}</h3>
-  </div>
-  <div class="modal-body">
-    <strong>From:</strong> {{selectedEmail.Sender}}<br />
-    <strong>Date:</strong> {{selectedEmail.ReceiveDate}}<br />
-    <br />
-    <p>
-      Hey You, <br />
-      <br />
-      How you doing?<br />
-      <br />
-      Sincerely<br />
-      Your Bro
-    </p>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn btn-primary" ng-click="closePopup()">Close</a>
+ <div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" ng-click="close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Yes or No?</h4>
+      </div>
+      <div class="modal-body">
+        <p>It's your call...</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" ng-click="close('No')" class="btn btn-default" data-dismiss="modal">No</button>
+        <button type="button" ng-click="close('Yes')" class="btn btn-primary" data-dismiss="modal">Yes</button>
+      </div>
+    </div>
   </div>
 </div>
