--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,38 @@
 <!doctype html>
-<html ng-app="EmailApp">
+<html ng-app="ui.bootstrap.demo">
   <head>
-    <meta charset="utf-8">
-    <title>AngularJS Email App</title>
-    <link href="css/style.css" rel="stylesheet">
-    <style>
-    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-      display: none !important;
-    }
-    </style>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    <script src="example.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header" role="banner">
-      <div class="header__text">
-        <p>Angular Mail by <a href="http://www.thinkful.com/a/learn">Thinkful.com</a></p>
-      </div>
-    </header>
 
-    <main class="main" role="main">
-      <div ng-view class="flex"></div>
-    </main>
+<div ng-controller="ModalDemoCtrl">
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">I'm a modal!</h3>
+        </div>
+        <div class="modal-body">
+            <ul>
+                <li ng-repeat="item in items">
+                    <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
+                </li>
+            </ul>
+            Selected: <b>{{ selected.item }}</b>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 
-    <!-- Vendor libraries -->
-    <script src="lib/jquery-v1.11.1.js"></script>
-    <script src="lib/angular-v1.2.22.js"></script>
-    <script src="lib/angular-route-v1.2.22.js"></script>
-    <script src="lib/angular-sanitize-v1.2.22.js"></script>
-    <!-- Application Files -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers/InboxCtrl.js"></script>
-    <script src="js/controllers/EmailCtrl.js"></script>
-    <script src="js/factories/InboxFactory.js"></script>
-    <script src="js/factories/EmailFactory.js"></script>
-    <script src="js/directives/InboxDrctv.js"></script>
-    <script src="js/directives/EmailDrctv.js"></script>
+    <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+</div>
   </body>
 </html>
