--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <script src="/js/test.js"></script>
   </head>
   <body>
+    <style>
+    .container {
+      margin-top: 40px;
+    }
+    </style>
     <div class="container" ng-app="ui.bootstrap.demo" ng-controller="EmailController">
         <ul class="nav nav-tabs">
             <li ng-class="{active: activeTab == 'inbox'}">
