--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       margin-top: 40px;
     }
     </style>
-    <div class="container" ng-app="ui.bootstrap.demo" ng-controller="EmailController">
+    <div class="container" ng-app ng-controller="EmailController">
         <ul class="nav nav-tabs">
             <li ng-class="{active: activeTab == 'inbox'}">
                 <a ng-click="activeTab='inbox'">Inbox</a>
