--- a/public/index.html
+++ b/public/index.html
@@ -1,86 +1,22 @@
 <!doctype html>
-<html>
+<html ng-app="ui.bootstrap.demo">
   <head>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
-    <script src="/js/test.js"></script>
+    <script src="/js/example.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <style>
-    .container {
-      margin-top: 40px;
-    }
-    </style>
-    <div class="container" ng-app ng-controller="EmailController">
-        <ul class="nav nav-tabs">
-            <li ng-class="{active: activeTab == 'inbox'}">
-                <a ng-click="activeTab='inbox'">Inbox</a>
-            </li>
-            <li ng-class="{active: activeTab == 'sent'}">
-                <a ng-click="activeTab='sent'">Sent</a>
-            </li>
-        </ul>
-        <table ng-show="activeTab=='inbox'" class="table table-bordered table-condensed">
-            <tbody>
-                <tr ng-repeat="email in emails" ng-click="showPopup(email)">
-                    <td>{{ email.from }}</td>
-                    <td>{{ email.subject }}</td>
-                    <td>{{ email.date }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <table ng-show="activeTab=='sent'" class="table table-bordered table-condensed">
-            <tbody>
-                <tr ng-repeat="email in sentEmails" ng-click="showPopup(email)">
-                    <td>{{ email.to }}</td>
-                    <td>{{ email.subject }}</td>
-                    <td>{{ email.date | date:'MMM d' }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <button class="btn btn-primary" ng-click="showComposePopup()">Compose</button>
 
-        <div class="modal" ng-show="isPopupVisible">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closePopup()">&times;</button>
-                <h3>{{selectedEmail.subject}}</h3>
-            </div>
-            <div class="modal-body">
-                <strong>From:</strong> {{selectedEmail.from}}<br />
-                <strong>To:</strong> {{selectedEmail.to}}<br />
-                <strong>Date:</strong> {{selectedEmail.date | date:'MMM d' }}<br />
-                <br />
-                <span style="white-space:pre">{{selectedEmail.body}}</span>
-            </div>
-            <div class="modal-footer">
-                <a href="#" class="btn" ng-click="forward()">Forward</a>
-                <a href="#" class="btn" ng-click="reply()">Reply</a>
-                <a href="#" class="btn btn-primary" ng-click="closePopup()">Close</a>
-            </div>
-        </div>
+<div ng-controller="ModalDemoCtrl">
 
-        <div class="modal" ng-show="isComposePopupVisible">
-            <div class="modal-header">
-                <button type="button" class="close" ng-click="closeComposePopup()">&times;</button>
-                <h3>Compose Email</h3>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <input type="text" placeholder="To" style="width:95%;"
-                        ng-model="composeEmail.to"><br />
-                    <input type="text" placeholder="Subject" style="width:95%;"
-                        ng-model="composeEmail.subject"><br />
-                    <textarea style="width:95%;" rows="10"
-                        ng-model="composeEmail.body"></textarea>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <a href="#" class="btn"ng-click="closeComposePopup()">Close</a>
-                <a href="#" class="btn btn-primary" ng-click="sendEmail()">Send</a>
-            </div>
-        </div>
-    </div>
+
+    <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+</div>
   </body>
 </html>
