--- a/public/temps/modal.html
+++ b/public/temps/modal.html
@@ -3,12 +3,12 @@
         <h3 class="modal-title">I'm a modal!</h3>
     </div>
     <div class="modal-body">
-        <ul>
+        <!--<ul>
             <li ng-repeat="item in items">
                 <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
             </li>
         </ul>
-        Selected: <b>{{ selected.item }}</b>
+        Selected: <b>{{ selected.item }}</b>-->
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
