--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,41 @@
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
     <script src="/js/example.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
   </head>
   <body>
-
-<div ng-controller="MsgCtrl">
-  <table class="table table-striped table-bordered table-hover" id="mailTable">
-    <thead>
-      <tr>
-        <th>Flagged</th>
-        <th>UserID</th>
-        <th>Sender</th>
-        <th>Subject</th>
-        <th>Received</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="email in emails" ng-click="showPopup(email)">
-        <td>{{ email.Flagged }}</td>
-        <td>{{ email.RecipientUserID }}</td>
-        <td>{{ email.Sender }}</td>
-        <td>{{ email.Subject }}</td>
-        <td>{{ email.ReceiveDate }}</td>
-      </tr>
-    </tbody>
-  </table>
-
-    <!--<button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
-    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
-    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
-    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button>
-    <div ng-show="selected">Selection from a modal: {{ selected }}</div>-->
-</div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <i class="fa fa-envelope fa-fw"></i> Messages
+          </div>
+          <div class="panel-body">
+            <div ng-controller="MsgCtrl">
+              <table class="table table-striped table-bordered table-hover" id="mailTable">
+                <thead>
+                  <tr>
+                    <th>Flagged</th>
+                    <th>UserID</th>
+                    <th>Sender</th>
+                    <th>Subject</th>
+                    <th>Received</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr ng-repeat="email in emails" ng-click="showPopup(email)">
+                    <td>{{ email.Flagged }}</td>
+                    <td>{{ email.RecipientUserID }}</td>
+                    <td>{{ email.Sender }}</td>
+                    <td>{{ email.Subject }}</td>
+                    <td>{{ email.ReceiveDate }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
