--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <i class="fa fa-envelope fa-fw"></i> Messages
           </div>
           <div class="panel-body">
-            <div ng-controller="MsgCtrl">
+            <div ng-controller="notifications">
               <table class="table table-striped table-bordered table-hover" id="mailTable">
                 <thead>
                   <tr>
