--- a/public/temps/modal.html
+++ b/public/temps/modal.html
@@ -3,7 +3,7 @@
         <h3 class="modal-title">{{email.subject}}</h3>
     </div>
     <div class="modal-body">
-      <p>{{data}}</p>
+      <p>{{$scope.email}}</p>
         <!--<ul>
             <li ng-repeat="item in items">
                 <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
