--- a/public/temps/modal.html
+++ b/public/temps/modal.html
@@ -4,6 +4,9 @@
     </div>
     <div class="modal-body">
       <p>{{$scope.email}}</p>
+      <script>
+        console.log({{$scope}});
+      </script>
         <!--<ul>
             <li ng-repeat="item in items">
                 <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
