--- a/public/temps/modal.html
+++ b/public/temps/modal.html
@@ -1,9 +1,9 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">{{email.subject}}</h3>
+        <h3 class="modal-title">{{email.Subject}}</h3>
     </div>
     <div class="modal-body">
-      <p>{{data}}</p>
+      <p>{{email}}</p>
         <!--<ul>
             <li ng-repeat="item in items">
                 <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
