--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                   </tr>
                 </tbody>
               </table>
-              <div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-show="modalShow">
+              <div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
