--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    <script src="/js/jquery.js"></script>
     <script src="/js/example.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
