--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,14 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <h4 class="modal-title" id="myModalLabel">{{selectedEmail.Subject}}</h4>
+                      <h4 class="modal-title" id="myModalLabel">Subject: {{selectedEmail.Subject}}</h4>
                     </div>
                     <div class="modal-body">
-                      {{selectedEmail}}
+                      <h5>Sender: {{selectedEmail.Sender}}</h5>
+                      <h5>To: {{selectedEmail.RecipientuserID}}</h5>
+                      <h5>Date: {{selectedEmail.ReceiveDate}}</h5>
+                      <h5>Message: </h5>
+                      {{selectedEmail.Text}}
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
