--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="modal-body">
                       <h5>Sender: {{selectedEmail.Sender}}</h5>
-                      <h5>To: {{selectedEmail.RecipientuserID}}</h5>
+                      <h5>To: {{selectedEmail.RecipientUserID}}</h5>
                       <h5>Date: {{selectedEmail.ReceiveDate}}</h5>
                       <h5>Message: </h5>
                       {{selectedEmail.Text}}
