--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                 </tbody>
               </table>
               <div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
+                <div class="modal-dialog modal-lg" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -52,7 +52,7 @@
                       <h5>To: {{selectedEmail.RecipientUserID}}</h5>
                       <h5>Date: {{selectedEmail.ReceiveDate}}</h5>
                       <h5>Message: </h5>
-                      <iframe id="iframe"></iframe>
+                      <iframe id="iframe" style="width:100%; height:100%"></iframe>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
