--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,12 @@
                       <h5>To: {{selectedEmail.RecipientUserID}}</h5>
                       <h5>Date: {{selectedEmail.ReceiveDate}}</h5>
                       <h5>Message: </h5>
-                      <iframe id="iframe" style="width:100%; height:100%"></iframe>
+                      <iframe id="iframe" style="width:100%; height:500px"></iframe>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
+                      <button type="button" class="btn btn-primary"><i class="fa fa-reply"></i> Reply</button>
+                      <button type="button" class="btn btn-primary"><i class="fa fa-share"></i> Forward</button>
                     </div>
                   </div>
                 </div>
