--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
