--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
             </div>
             <div class="panel-body">
               <div ng-controller="MsgCtrl">
-                <table class="table table-striped table-bordered table-hover" id="mailTable">
+                <table class="table table-bordered table-hover" id="mailTable">
                   <thead>
                     <tr>
                       <th>Flagged</th>
