--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,25 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <i class="fa fa-envelope fa-fw"></i> Messages
+              <div class="pull-right">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                    Actions
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu pull-right" role="menu">
+                    <li><a href="#">Action</a>
+                    </li>
+                    <li><a href="#">Another action</a>
+                    </li>
+                    <li><a href="#">Something else here</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li><a href="#">Separated link</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
             <div class="panel-body">
               <div ng-controller="MsgCtrl">
