--- a/public/login.html
+++ b/public/login.html
@@ -41,7 +41,7 @@
                   </label>
                 </div>
                 <!-- Change this to a button or input when using this as a form -->
-                <input type="submit" class="btn btn-primary pull-right" value="Login" ng-click="login" />
+                <input type="submit" class="btn btn-primary pull-right" value="Login" ng-click="login()" />
               </fieldset>
             </form>
           </div>
